# rogue-vtt

./: .gitignore  Cargo.toml  README.md  build.sbt  configuration.yaml  ideas.md  local.sh
.bsp/: sbt.json
client/: .env  .vscodeignore  index.html  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vite.config.js  vite.config.ts
client/src/: App.svelte  Camera.ts  engine.ts  entity.ts  gamemap.ts  main.ts  main_wglt.ts  tiles.ts
client/src/lib/: Canvas.svelte  Game.svelte  MapCanvas.svelte  Modal.svelte  Palette.svelte  PopupLong.svelte  Sidebar.svelte  SidebarGlyph.svelte  TilePicker.svelte  Toolbar.svelte
client/src/lib/domain/: DungeonMap.ts  Entities.ts  EntityRenderer.ts  EventSystem.ts  Grid.ts  SelectedTile.ts  Tilesheet.ts
client/src/lib/game/: Camera.ts  Game.svelte  Interaction.ts  MouseMode.ts
client/src/lib/logic/: logic.ts
client/src/lib/login/: Login.svelte  loginstate.ts
client/src/lib/popups/: EntityForm.svelte  EntityPicker.svelte  Palette.svelte  TilePicker.svelte
client/src/lib/stores/: UI.ts  websocket.js
client/src/lib/text/: TextRenderer.ts  notes.md
client/src/lib/tilepicker/: Base.svelte  Palette.svelte  PopupLong.svelte  TilePicker.svelte
client/src/lib/tool/: FormParser.ts
client/temp/: index.html  js.js  style.css
migrations/: 20240130171724_create_games_table.sql  20240130233258_create_levels_table.sql
project/: Deps.scala
scripts/: db.md  init_db.sh
server/: Cargo.toml  ideas.md
server/src/: main.rs
server/src/domain/: messages.rs
src/: configuration.rs  main.rs
src/domain/: Game.rs  Message.rs  event.rs  game.rs  messages.rs  mod.rs
src/state/: Memory.rs  db.rs  dispatcher.rs  loader.rs  memory.rs  mod.rs  room.rs
tiles/: dc-vttfeat.txt  dc-vttfloor.txt  dc-vtticon.txt  dc-vttwall.txt  tileinfo-vttfeat.js  tileinfo-vttfloor.js  tileinfo-vtticon.js  tileinfo-vttwall.js
(+5 files in other folders)
