[package]
name = "roguevtt-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.4.0", features = ["cors"] }
uuid = {version = "1.4.1", features = [
    "v4",                # Lets you generate random UUIDs
    "serde"          # Use a faster (but still sufficiently random) RNG
]}
dashmap = "5.5.3"
