[package]
name = "roguevtt-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.4.0", features = ["cors","compression-gzip","fs"] }
uuid = {version = "1.4.1", features = [
    "v4",                # Lets you generate random UUIDs
    "serde"          # Use a faster (but still sufficiently random) RNG
]}
dashmap = "5.5.3"
anyhow = "1.0.75"
futures = "0.3.29"
async-trait = "0.1.74"
log = "0.4"
env_logger = "0.10.1"
config = "0.14.0"


# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx] 
version = "0.7.3" 
default-features = false 
features = [
"runtime-tokio", 
"tls-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]
